fixes nav on small and md monitors

--- a/wp-content/themes/hodgesmace/style.css
+++ b/wp-content/themes/hodgesmace/style.css
@@ -250,7 +250,7 @@ form {
     }
 }
 
-@media (min-width: 990px) {
+@media (min-width: 1090px) {
     .site-content .container,
     .container,
     .site-content .vc_row-fluid,
